# xfce3

./: ChangeLog  Makefile.am  Makefile.in  Makefile.init  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  xfce-3.8.10.lsm  xfce-3.8.11.lsm  xfce-3.8.12.lsm  xfce-3.8.14.lsm  xfce-3.8.16.lsm  xfce-3.8.18.lsm  xfce-3.8.4.lsm  xfce-3.8.5.lsm  xfce-3.8.6.lsm  xfce-3.8.7.lsm  xfce-3.8.8.lsm  xfce-3.8.9.lsm  xfce.spec
backdrops/: DISTFILES.in  Default.xpm  Makefile.am  Makefile.in  Makefile.in.in
cursors/: DISTFILES.in  Makefile.am  Makefile.in  Makefile.in.in  cursor2.pcf
debian/: changelog  sample.xfce3rc  sample.xfce3rc.ja  sample.xfce3rc.ko  sample.xfce3rc.zh_CN.GB2312  sample.xfce3rc.zh_TW.Big5  sample.xfcolors  sample.xfwmrc  xfcolors
docs/: DISTFILES.in  Makefile.am  Makefile.in  Makefile.in.in  taskbar.txt
dt/: Makefile.in
fonts/: DISTFILES.in  Makefile.am  Makefile.in  Makefile.in.in  cursor2.pcf
gdm/: Makefile.in  XFce.in
icons/: DISTFILES.in  Makefile.am  Makefile.in  Makefile.in.in
intl/: bindtextdom.c  dcgettext.c  explodename.c  finddomain.c  gettext.h  gettextP.h  hash-string.h  l10nflist.c  loadinfo.h  loadmsgcat.c  localealias.c  textdomain.c
libs/: GetFont.c  Grab.c  Makefile.am  Makefile.in  Module.c  Strings.c  UTF8.c  UTF8.h  colorselect.c  configure.h  constant.h  fileutil.c  gnome_protocol.c  my_scandir.c  my_scandir.h  my_string.c  my_string.h  mygtkclock.c  safemalloc.c  sendinfo.c  snprintf.c  snprintf.h  utils.h  wild.c  xfce-common.c  xfce-common.h  xfcolor.c  xpmext.c
other/: CONFFILES.in  COPYING  COPYING.in  Makefile.am  Makefile.in  Makefile.in.in  taskbarrc  xfbdrc.in  xfce3rc.bg  xfce3rc.bg.in  xfce3rc.cs  xfce3rc.cs.in  xfce3rc.de.in  xfce3rc.fr.in  xfce3rc.hu.in  xfce3rc.in  xfce3rc.ja.in  xfce3rc.ko.in  xfce3rc.nl.in  xfce3rc.sr  xfce3rc.sr.in  xfce3rc.uk.in  xfce3rc.zh_CN.GB2312.in  xfce3rc.zh_TW.Big5.in  xfsoundrc.in  xfwmrc.in  xinitrc  xinitrc.in  xinitrc.mwm  xinitrc.mwm.in
palettes/: Altxfce  Altxfce2  Altxfce3  Aluminium  Analog  Anthracite  Basic  BeHappy  BeHappy2  BeHappy3  BeHappy4  Bingo  Blue  BlueX  BlueX2  BlueX3  BlueX4  Bronze  Bronze2  CandyBox  Chrome  Classic  Classic2  Craters  DISTFILES.in  DarkMetal  Default  Eaz-l  (+70 more)
xfumed/: Changelog  Makefile.am  Makefile.in  README  callbacks.c  callbacks.h  clistmenu.c  clistmenu.h  interface.c  interface.h  main.c  usermenu.c  usermenu.h  xfumed.c  xfumed.h  xfumed_gui.c  xfumed_gui.h  xfumed_gui_cb.c  xfumed_gui_cb.h
xfumed/icons/: Makefile.in
(+333 files in other folders)
